--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,6 @@
     "no-underscore-dangle" : "off",
     "no-plusplus": "off",
     "import/extensions": "off"
-  }
+  },
+  "parser": "@babel/eslint-parser"
 }
